Vulnerability Fixing and POM reorganization